# populations_data_1

./: README.md  populations_data_1.ipynb  pyproject.toml  signals_1.ipynb
.ipynb_checkpoints/: populations_data_1-checkpoint.ipynb
files/: exercise_people1.csv  generate_synthetic_hr_data.py  my_regression.py  show_data1.py  synthetic_hr_data.csv
files/answers/: music_vs_baseline_2.py  puls_bt_regression1.py  puls_bt_regression2.py
files/answers/tavle/: puls_bt_regression1.py
